Linting used && redis caching implemented on Task Module
